--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/",
+  "proxy": "https://share-fun-api.onrender.com",
   "devDependencies": {
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
